--- a/style.css
+++ b/style.css
@@ -773,7 +773,7 @@ section.content > .activity > .actions > ul.tab span.line {
   background: var(--accent-linear);
   display: inline-block;
   bottom: -2.5px;
-  left: 12px;
+  left: 0px;
   width: 20px;
   min-height: 5px;
   border-top-left-radius: 5px;
@@ -818,9 +818,31 @@ section.content > .activity > .activities > .story {
   margin: 0 0 -1px 0;
 }
 
+.activities > .story > .head svg.at {
+  width: 13px;
+  height: 13px;
+  /* rotate: 45deg; */
+  color: var(--gray-color);
+  margin: 0 0 -1px 0;
+}
+
+.activities > .story > .head svg.saved {
+  width: 13px;
+  height: 13px;
+  color: var(--gray-color);
+  margin: -2px 0 0 0;
+}
+
+.activities > .story > .head svg.upvoted {
+  width: 14px;
+  height: 14px;
+  color: var(--gray-color);
+  margin: -0.5px 0 0 0;
+}
+
 .activities > .story > .head > span.text {
   color: var(--gray-color);
-  font-size: 0.88rem;
+  font-size: 0.9rem;
   font-family: var(--font-text), sans-serif;
   font-style: italic;
 }
