--- a/theme.css
+++ b/theme.css
@@ -63,6 +63,7 @@ Author URL: https://femar.co.ke
   --hover-background: #f8f8f8;
 
   --accent-color: #08b86f;
+  --accent-alt: #21D029;
   --white-color: #ffffff;
   --gray-color: #6b7280;
   --text-color: #53595f;
