--- a/theme.css
+++ b/theme.css
@@ -31,6 +31,7 @@ Author URL: https://femar.co.ke
 
 :root {
   --tab-background: #d0d7de33;
+  --stat-background: #ebf5ff;
 
 
   --font-main: "Inter";
