--- a/style.css
+++ b/style.css
@@ -917,7 +917,7 @@ section.content > .activity > .activities > .story {
 
 .stats > .summery {
   border-bottom: var(--story-border-mobile);
-  margin: 20px 0;
+  margin: 0;
   width: 100%;
   display: flex;
   flex-flow: column;
@@ -1008,9 +1008,9 @@ section.content > .activity > .activities > .story {
 
 .stats > .summery > .content > .main .views .text > h2 {
   color: var(--text-color);
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: 500;
-  font-family: var(--font-text), sans-serif;
+  font-family: var(--font-main), sans-serif;
   margin: 0;
 }
 
