--- a/theme.css
+++ b/theme.css
@@ -31,7 +31,7 @@ Author URL: https://femar.co.ke
 
 :root {
   --tab-background: #d0d7de33;
-  --stat-background: #ebf5ff;
+  --stat-background: #f1f1f1;
 
 
   --font-main: "Inter";
