--- a/res.css
+++ b/res.css
@@ -19,6 +19,9 @@
 }
 
 @media screen and (max-width:660px) {
+  html {
+    font-size: 16px;
+  }
   body {
     /* border: 1px solid blue; */
     padding: 0 10px 30px 10px;
