--- a/style.css
+++ b/style.css
@@ -297,6 +297,55 @@ section.content {
 }
 
 
+div.coming-soon {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  width: 100%;
+  min-height: max-content;
+  height: 100%;
+}
+
+div.coming-soon > .title {
+  /* border: 1px solid #6b7280; */
+  color: var(--text-color);
+  font-family: var(--title-text), sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+
+div.coming-soon > .title svg {
+  color: var(--error-color);
+  width: 50px;
+  height: 50px;
+  margin: 0 0 10px 0;
+}
+
+div.coming-soon > .title span.text {
+  color: var(--gray-color);
+  font-family: var(--font-text), sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+div.coming-soon > p.info {
+  color: var(--gray-color);
+  font-family: var(--font-main), sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+}
+
+
 /*Footer*/
 footer.footer {
   border-top: thin solid #4b5563bd;
