--- a/style.css
+++ b/style.css
@@ -296,7 +296,6 @@ section.content {
   width: 70%;
 }
 
-
 div.coming-soon {
   /* border: 1px solid #6b7280; */
   display: flex;
@@ -343,6 +342,42 @@ div.coming-soon > p.info {
   font-weight: 400;
   line-height: 1.5;
   text-align: center;
+}
+
+.themes {
+  font-size: 16px;
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+  padding: 0;
+  width: 100%;
+}
+
+.themes > .top {
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+  padding: 0;
+  width: 100%;
+}
+
+.themes > .top>h4.title {
+  border-bottom: var(--story-border-mobile);
+  display: flex;
+  align-items: center;
+  color: var(--title-color);
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin: 0;
+  padding: 0 0 6px 0;
+}
+
+.themes .top > .desc {
+  margin: 0;
+  padding: 10px 0;
+  color: var(--gray-color);
+  font-size: 1rem;
+  font-family: var(--font-main), sans-serif;
 }
 
 
