--- a/theme.css
+++ b/theme.css
@@ -86,6 +86,8 @@ Author URL: https://femar.co.ke
 
   /* --option-background: linear-gradient(#53595f71, #627ea034); */
 
+  --error-linear: linear-gradient(103.53deg, #fa6436 -6.72%, #ec4b19 109.77%);
+
   --second-linear: linear-gradient(0deg,#df791a 0%, #f09c4e 100%);
 
   --accent-linear: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
