--- a/theme.css
+++ b/theme.css
@@ -46,6 +46,7 @@ Author URL: https://femar.co.ke
   --input-border-error: 1px solid #ec4a1965;
   --action-border: 1px solid #6b72803f;
   --story-border: thin solid #6b72801a;
+  --action-border: thin solid #627ea073;
 
   --label-focus-background: #eaf3ff;
 
@@ -65,6 +66,7 @@ Author URL: https://femar.co.ke
 
   --accent-color: #08b86f;
   --accent-alt: #21D029;
+  --action-color: #627ea0;
   --white-color: #ffffff;
   --gray-color: #6b7280;
   --text-color: #53595f;
@@ -72,7 +74,6 @@ Author URL: https://femar.co.ke
   --title-color: #1f2937;
   --color-alt: #ff932f;
   --error-color: #ec4b19;
-  --action-color: #1d2c38;
   --anchor: #4b556321;
   --anchor-active: #21D029;
 
@@ -84,12 +85,9 @@ Author URL: https://femar.co.ke
   --modal-border: 1px solid #83858442;
   --modal-overlay: #1d2534b3;
 
-  /* --option-background: linear-gradient(#53595f71, #627ea034); */
-
+  --action-linear: linear-gradient(#53595f, #627ea0);
   --error-linear: linear-gradient(103.53deg, #fa6436 -6.72%, #ec4b19 109.77%);
-
   --second-linear: linear-gradient(0deg,#df791a 0%, #f09c4e 100%);
-
   --accent-linear: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
   --alt-linear: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20));
   --loader-gradient: linear-gradient(-45deg, #ececec, #f8f8f8, #DDDDDD, #f8f8f8, #ececec);
