--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ section.content {
   /* border: 1px solid #6b7280; */
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 0;
 }
 
 .song > .body > .lyrics {
@@ -185,13 +185,14 @@ section.content {
   flex-flow: column;
   position: relative;
   gap: 10px;
-  padding: 3px 0;
+  padding: 0;
+  margin: 0 0 10px;
 }
 
 .song > .body > .lyrics > p {
   display: block;
   color: var(--text-color);
-  line-height: 1.3;
+  line-height: 1.5;
   font-size: 1rem;
   margin: 0;
   padding: 0 10px 0 18px;
@@ -203,10 +204,10 @@ section.content {
   display: inline-block;
   box-sizing: border-box;
   width: 3px;
-  height: 100%;
+  height: 88%;
   position: absolute;
   left: 2px;
-  top: 2%;
+  top: 6%;
   background-color: #6b72803d;
   border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -224,16 +225,23 @@ section.content {
   -webkit-background-clip: text;
 }
 
+.song > .body > span.title {
+  color: var(--action-color);
+  font-weight: 500;
+  font-size: 1.07rem;
+  line-height: 1.5;
+}
+
 .song > .body > .info {
   /* border: 1px solid #6b7280; */
   color: var(--gray-color);
   display: flex;
   flex-flow: row;
   align-items: center;
-  gap: 2px;
+  gap: 5px;
   font-weight: 500;
-  font-family: var(--font-mono), monospace;
-  font-size: 0.9rem;
+  font-family: var(--font-text), sans-serif;
+  font-size: 0.85rem;
 }
 
 .song > .body > .info .genre {
@@ -241,10 +249,9 @@ section.content {
 }
 
 .song > .body > .info .sp {
-  /* border: 1px solid #6b7280; */
   height: max-content;
   line-height: 1;
-  margin: 2px 0 0 0;
+  /* margin: 2px 0 0 0; */
 }
 
 
@@ -259,7 +266,6 @@ section.content {
 
 .stats.actions > span.play {
   cursor: pointer;
-  /* border: thin solid #627ea073; */
   display: flex;
   align-items: center;
   font-family: var(--font-text) sans-serif;
@@ -270,8 +276,7 @@ section.content {
   border-radius: 50px;
   font-weight: 500;
   font-size: 1rem;
-  /*background: linear-gradient(#53595f, #627ea0);
-  */color: #627ea0;
+  color: var(--action-color);
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   -ms-border-radius: 50px;
@@ -279,8 +284,7 @@ section.content {
 }
 
 .stats.actions > span.play > svg {
-  /* border: 1px solid #6b7280; */
-  color: #627ea0;
+  color: var(--action-color);
   width: 23px;
   height: 23px;
 }
@@ -299,7 +303,8 @@ section.content {
   gap: 5px;
   font-size: 1rem;
   font-weight: 400;
-  color: var(--gray-color);
+  color: var(--action-color);
+  /* color: var(--gray-color); */
   border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
@@ -323,7 +328,7 @@ section.content {
 .stats.actions > span.play:hover,
 .stats.actions > span.stat:hover,
 .stats.actions > span.action:hover {
-  background: #f7f7f7;
+  background: var(--hover-background);
 }
 
 .stats.actions span.numbers {
@@ -342,7 +347,7 @@ section.content {
   gap: 3px;
   font-size: 1rem;
   font-weight: 400;
-  color: var(--gray-color);
+  /* color: var(--gray-color); */
 }
 
 .stats.actions > .stat > .numbers,
