--- a/theme.css
+++ b/theme.css
@@ -58,11 +58,11 @@ Author URL: https://femar.co.ke
   --vh-height: 100dvh;
 
   --action-background: #1d2c38d2;
-
   --author-background: #f1f3f4;
   --user-background: #f8f8f8;
   --dot-background: #6b7280c9;
-  --hover-background: #f8f8f8;
+  --hover-background: #f7f7f7;
+  --que-background: #627ea06c;
 
   --accent-color: #08b86f;
   --accent-alt: #21D029;
