--- a/style.css
+++ b/style.css
@@ -142,9 +142,10 @@ section.content {
 
 .song {
   /* border: var(--input-border); */
+  width: 100%;
   display: flex;
   flex-flow: column;
-  gap: 5px;
+  gap: 0;
 }
 
 .song > .head {
@@ -184,16 +185,18 @@ section.content {
   display: flex;
   flex-flow: column;
   position: relative;
-  gap: 10px;
+  gap: 0;
   padding: 0;
   margin: 0 0 10px;
 }
 
 .song > .body > .lyrics > p {
   display: block;
-  color: var(--text-color);
-  line-height: 1.5;
-  font-size: 1rem;
+  color: var(--gray-color);
+  font-family: var(--font-que), sans-serif;
+  line-height: 1.3;
+  font-size: 1.05rem;
+  font-weight: 500;
   margin: 0;
   padding: 0 10px 0 18px;
   /* border: 1px solid #6b728054; */
@@ -217,7 +220,7 @@ section.content {
 }
 
 .song > .body > .lyrics > p span.highlight {
-  font-weight: 500;
+  /* font-weight: 500; */
   padding: 0 5px;
   color: transparent;
   background: var(--accent-linear);
@@ -227,9 +230,10 @@ section.content {
 
 .song > .body > span.title {
   color: var(--action-color);
+  font-family: var(--font-que), sans-serif;
   font-weight: 500;
   font-size: 1.07rem;
-  line-height: 1.5;
+  line-height: 1.3;
 }
 
 .song > .body > .info {
@@ -241,6 +245,7 @@ section.content {
   gap: 5px;
   font-weight: 500;
   font-family: var(--font-text), sans-serif;
+  /* font-family: var(--font-que), sans-serif; */
   font-size: 0.85rem;
 }
 
@@ -257,7 +262,7 @@ section.content {
 
 .stats.actions {
   /* border: var(--input-border); */
-  padding: 0;
+  padding: 5px 0 0 0;
   margin: 0;
   display: flex;
   align-items: center;
