--- a/style.css
+++ b/style.css
@@ -136,16 +136,17 @@ section.content {
   flex-flow: column;
   align-items: start;
   padding: 0;
-  gap: 35px;
+  gap: 0;
   width: 63%;
 }
 
 .song {
-  /* border: var(--input-border); */
+  border-bottom: var(--story-border);
   width: 100%;
   display: flex;
   flex-flow: column;
   gap: 0;
+  padding: 15px 0 10px;
 }
 
 .song > .head {
@@ -156,22 +157,6 @@ section.content {
   /* justify-content: space-between; */
   gap: 5px;
 }
-
-.song > .head > .title {
-  /* border: 1px solid #6b7280; */
-  color: var(--gray-color);
-  font-weight: 500;
-  /* line-height: 1; */
-  font-size: 1.05rem;
-}
-
-.song > .head > svg {
-  color: var(--gray-color);
-  margin: 1px 0 0 -2px;
-  width: 18px;
-  height: 18px;
-}
-
 
 .song > .body {
   /* border: 1px solid #6b7280; */
@@ -187,7 +172,7 @@ section.content {
   position: relative;
   gap: 0;
   padding: 0;
-  margin: 0 0 10px;
+  margin: 0 0 5px;
 }
 
 .song > .body > .lyrics > p {
@@ -199,7 +184,6 @@ section.content {
   font-weight: 500;
   margin: 0;
   padding: 0 10px 0 18px;
-  /* border: 1px solid #6b728054; */
 }
 
 .song > .body > .lyrics::before {
@@ -207,11 +191,13 @@ section.content {
   display: inline-block;
   box-sizing: border-box;
   width: 3px;
-  height: 88%;
+  height: 80%;
   position: absolute;
-  left: 2px;
-  top: 6%;
-  background-color: #6b72803d;
+  left: 0;
+  top: 10%;
+  /* background-color: var(--action-color); */
+  background: var(--alt-linear);
+  opacity: .7;
   border-radius: 2px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -233,7 +219,7 @@ section.content {
   font-family: var(--font-que), sans-serif;
   font-weight: 500;
   font-size: 1.07rem;
-  line-height: 1.3;
+  line-height: 1;
 }
 
 .song > .body > .info {
@@ -246,7 +232,7 @@ section.content {
   font-weight: 500;
   font-family: var(--font-text), sans-serif;
   /* font-family: var(--font-que), sans-serif; */
-  font-size: 0.85rem;
+  font-size: 0.8rem;
 }
 
 .song > .body > .info .genre {
@@ -300,6 +286,7 @@ section.content {
   min-height: 35px;
   height: 35px;
   width: max-content;
+  position: relative;
   padding: 5px 10px;
   cursor: pointer;
   display: flex;
@@ -467,6 +454,68 @@ section.content {
 .stats.actions > span.active svg {
   color: var(--color-alt);
 }
+
+.stats.actions>span.action.share > .overlay {
+  display: flex;
+  flex-flow: column;
+  z-index: 4;
+}
+
+.stats.actions > span.action.share .options {
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+  box-shadow: var(--card-box-shadow);
+  width: 240px;
+  padding: 8px 8px;
+  position: absolute;
+  bottom: calc(100% - 35px);
+  right: calc(50% - 100px);
+  background: var(--background);
+  border: var(--story-border-mobile);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.stats.actions > span.action.share .options > .option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+  padding: 8px 10px;
+  color: var(--action-color);
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+.stats.actions > span.action.share .options > .option:hover {
+  background: var(--hover-background);
+}
+
+.stats.actions > span.action.share .options > .option > span.text {
+  font-family: var(--font-text), sans-serif;
+  font-weight: 500;
+  font-size: 1.05rem;
+}
+
+.stats.actions > span.action.share .options > .option > svg {
+  width: 18px;
+  height: 18px;
+}
+
+.stats.actions > span.action.share .options > .option.code > svg,
+.stats.actions > span.action.share .options > .option.frame > svg {
+  width: 17px;
+  height: 17px;
+}
+
+
 
 /*Footer*/
 footer.footer {
