--- a/style.css
+++ b/style.css
@@ -410,6 +410,15 @@ section.content {
   -webkit-background-clip: text;
 }
 
+.stats.actions > span.action.share > .icon {
+  display: flex;
+  gap: 0;
+}
+.stats.actions > span.action.share > .icon > span.sp {
+  font-size: 1.2rem;
+  /* color: var(--gray-color); */
+}
+
 .stats.actions > span svg {
   color: inherit;
   width: 16px;
@@ -433,16 +442,6 @@ section.content {
 
 .stats.actions > span.stat.down svg {
   color: var(--error-color);
-}
-
-
-.stats.actions > span.action.share svg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* margin: 0 0 -1px 0; */
-  width: 19px;
-  height: 19px;
 }
 
 .stats.actions > span.true svg,
