--- a/style.css
+++ b/style.css
@@ -460,6 +460,10 @@ section.content {
   z-index: 4;
 }
 
+.stats.actions > span.action.share > .overlay span.close {
+  display: none;
+}
+
 .stats.actions>span.action.share > .overlay.active {
   display: flex;
 }
@@ -541,24 +545,36 @@ section.content {
   }
 
   /* actions */
-  .stats.actions>span.action.share > .overlay {
-    display: flex;
+  .stats.actions > span.action.share > .overlay {
     position: fixed;
-    background-color: #18a565;
+    background-color: var(--modal-overlay);
     z-index: 100;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+    display: none;
+  }
+
+  .stats.actions > span.action.share > .overlay span.close {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 
   .stats.actions > span.action.share .options {
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
+    align-items: center;
+    justify-content: space-around;
+    z-index: 1;
     gap: 0;
     box-shadow: var(--card-box-shadow);
     width: 100%;
-    padding: 8px 8px;
+    padding: 15px 8px;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -567,20 +583,34 @@ section.content {
     border: var(--story-border-mobile);
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 
   .stats.actions > span.action.share .options > .option {
     display: flex;
+    flex-flow: column-reverse;
     align-items: center;
     justify-content: space-between;
     gap: 5px;
-    padding: 8px 10px;
-    color: var(--text-color);
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
+    padding: 10px;
+  }
+
+  .stats.actions > span.action.share .options > .option > svg {
+    width: 30px;
+    height: 30px;
+  }
+
+  .stats.actions > span.action.share .options > .option.code > svg,
+  .stats.actions > span.action.share .options > .option.frame > svg {
+    width: 29px;
+    height: 29px;
+  }
+
+  .stats.actions > span.action.share .options > .option > span.text {
+    font-family: var(--font-read), sans-serif;
+    font-weight: 400;
+    font-size: 0.8rem;
   }
 }
 
